--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,10 @@
 
     <string name="test">Test</string>
     <string name="group3842">3842</string>
+    <string name="group3832">3832</string>
     <string-array name="spinner_items">
         <item>@string/test</item>
         <item>@string/group3842</item>
+        <item>@string/group3832</item>
     </string-array>
 </resources>
