--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,15 @@
     <string name="class_text2">class!</string>
     <string name="text_dayoff">Day off!</string>
     <string name="loading">Loading...</string>
+    <string name="longsix">The password must be at least 6 characters long</string>
+    <string name="emailformat">Invalid email format</string>
+    <string name="email">Enter email</string>
+    <string name="password">Enter password</string>
+    <string name="login">Login</string>
+    <string name="signup">Sign Up</string>
+    <string name="acc1">Didnt have an account before?</string>
+    <string name="acc2">Enter your email and password and press Sign Up!</string>
+    <string name="error">Error, check the entered data</string>
 
 
     <string name="test">Test</string>
