--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -39,6 +39,7 @@
     <string name="email">Введите email</string>
     <string name="password">Введите пароль</string>
     <string name="login">Авторизоваться</string>
+    <string name="loginanonym">Авторизоваться как аноним</string>
     <string name="signup">Зарегестрироваться</string>
     <string name="acc1">У вас раньше не было учетной записи?</string>
     <string name="acc2">Введите свой адрес электронной почты и пароль и нажмите Зарегистрироваться!</string>
